[gd_scene load_steps=12 format=3 uid="uid://db66udrwcgve6"]

[ext_resource type="Script" uid="uid://dixbvss0wu5l6" path="res://Script/main_menu.gd" id="1_16hvj"]
[ext_resource type="Texture2D" uid="uid://5fvanw2u0uo6" path="res://Asset/MainMenu/Main Menu.png" id="2_vr1f0"]
[ext_resource type="Texture2D" uid="uid://b4vvgd0e73lk4" path="res://Asset/MainMenu/play putih.png" id="3_t1dhk"]
[ext_resource type="Texture2D" uid="uid://cn85xcij3c3mi" path="res://Asset/MainMenu/Play biru.png" id="4_16hvj"]
[ext_resource type="Texture2D" uid="uid://dqlenhmcl2by3" path="res://Asset/MainMenu/credit putih.png" id="4_trj04"]
[ext_resource type="Texture2D" uid="uid://cgacv63er54t4" path="res://Asset/MainMenu/credit biru.png" id="5_16hvj"]
[ext_resource type="Texture2D" uid="uid://bodheeb85u4m4" path="res://Asset/MainMenu/exit putih.png" id="7_m3bi6"]
[ext_resource type="Texture2D" uid="uid://dulypgqpl7ili" path="res://Asset/MainMenu/exit biru.png" id="8_wyh8j"]
[ext_resource type="Texture2D" uid="uid://v0biyqg7w1ub" path="res://Asset/Credit/CREDIT RILL.png" id="9_trj04"]
[ext_resource type="Texture2D" uid="uid://t6vq6lq6jw4i" path="res://Asset/Credit/1757749318380.png" id="10_vr1f0"]
[ext_resource type="Texture2D" uid="uid://w7o26tyw26r8" path="res://Asset/Credit/1757823322225.png" id="11_t1dhk"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_16hvj")
metadata/_edit_lock_ = true

[node name="BGMenu" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1440.0
offset_bottom = 810.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.797222, 0.806173)
texture = ExtResource("2_vr1f0")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 797.0
offset_top = 412.0
offset_right = 1136.0
offset_bottom = 650.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
metadata/_edit_lock_ = true

[node name="PlayBtn" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_t1dhk")
texture_pressed = ExtResource("4_16hvj")
texture_hover = ExtResource("4_16hvj")
metadata/_edit_lock_ = true

[node name="CreditBtn" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("4_trj04")
texture_pressed = ExtResource("5_16hvj")
texture_hover = ExtResource("5_16hvj")
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="Exit" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("7_m3bi6")
texture_pressed = ExtResource("8_wyh8j")
texture_hover = ExtResource("8_wyh8j")
metadata/_edit_lock_ = true

[node name="CreditPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="TextureRect" parent="CreditPanel"]
layout_mode = 0
offset_right = 1440.0
offset_bottom = 816.0
scale = Vector2(0.799305, 0.801235)
texture = ExtResource("9_trj04")
expand_mode = 1

[node name="BackBtn" type="TextureButton" parent="CreditPanel"]
layout_mode = 0
offset_left = 34.0
offset_top = 12.0
offset_right = 182.0
offset_bottom = 200.0
texture_normal = ExtResource("10_vr1f0")
texture_pressed = ExtResource("11_t1dhk")
texture_hover = ExtResource("11_t1dhk")

[connection signal="pressed" from="VBoxContainer/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditBtn" to="." method="_on_credit_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CreditPanel/BackBtn" to="." method="_on_back_btn_pressed"]
